--- a/resources/Azias/css/nibblepoker.lu.css
+++ b/resources/Azias/css/nibblepoker.lu.css
@@ -91,6 +91,28 @@ div#body-overlay {
 	image-rendering: pixelated;
 }
 
+hr, hr.dark-mode {
+	background-color: rgba(0, 0, 0, 0) !important;
+	background: rgb(93,95,97);
+	background: radial-gradient(circle, rgba(83,85,87,0.8) 0%, rgba(65,67,69,0.65) 75%, rgba(17,20,23,0) 100%);
+	opacity: 0.75;
+}
+
+@media (min-width: 993px) {
+	.l-lab-web {
+		background: linear-gradient(90deg, rgba(101,144,134,0.3) 0%, rgba(101,144,134,0.2) 1.5px, rgba(101,144,134,0.0) 7px);
+		clip-path: polygon(4px 0%, 100% 0, 100% 100%, 4px 100%, 0 calc(100% - 4px), 0 4px);
+	}
+	.l-lab-office {
+		background: linear-gradient(90deg, rgba(64,84,59,0.5) 0%, rgba(64,84,59,0.3) 2px, rgba(64,84,59,0.0) 7px);
+		clip-path: polygon(4px 0%, 100% 0, 100% 100%, 4px 100%, 0 calc(100% - 4px), 0 4px);
+	}
+	.l-lab-app {
+		background: linear-gradient(90deg, rgba(156,23,34,0.4) 0%, rgba(156,23,34,0.3) 1.5px, rgba(156,23,34,0.0) 7px);
+		clip-path: polygon(4px 0%, 100% 0, 100% 100%, 4px 100%, 0 calc(100% - 4px), 0 4px);
+	}
+}
+
 /* Trash */
 /*.lang-icon {
 	height: var(--base-line-height);
